--- a/style.css
+++ b/style.css
@@ -116,13 +116,19 @@ img {
     font-size: 16px;
     padding: 20px;
     color: #d0d0d0;
+    transition: all 0.3s ease;
 }
-
+.nav a:hover {
+    color: white;
+    text-shadow: 0px 0px 10px white;
+  }
 .logo {
     padding: 0 20px;
     width: 40px;
     height: 54px;
+    transition: all 0.3s ease;
 }
+
 button {
     font-family: "aoki_reg", sans-serif;
     padding: 10px 40px;
@@ -131,8 +137,20 @@ button {
     border-color: #dcdcdc;
     border-style: solid;
     color: #dcdcdc;
-    
+    transition: all 0.3s ease;
 }
+.work_button:hover {
+    border-color: white;
+    color: white;
+    text-shadow: 0px 0px 10px white;
+    box-shadow: 0px 0px 10px white;
+  }
+  .about_button:hover {
+    border-color: white;
+    color: white;
+    text-shadow: 0px 0px 10px white;
+    box-shadow: 0px 0px 10px white;
+  }
 .hero_buttons {
     padding-top: 72px;
 }
@@ -163,19 +181,37 @@ button {
     grid-template-columns: 50% 50%;
     gap: 135px;
     width: 100%;
+    margin-top: 204px;
     padding: 0px 160px;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
+   
 }
 
 .wannado_img {
     max-width: 100%;
     height: auto;
+    transition: all .3s ease;
+   
 }
-.wannado_text, .fcc_text {
+.wannado_text {
+    background-image: url(Images/cube_bg_1.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: right;
+    background-position-y: top;
     max-width: 100%;
     padding-right: 100px;
+}
+.fcc_text {
+    background-image: url(Images/cube_bg_3.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: right;
+    background-position-y: top;
+    max-width: 100%;
+    padding-right: 100px; 
 }
 .swallow_img {
     max-width: 100%;
@@ -184,6 +220,11 @@ button {
     
 }
 .swallow_text {
+    background-image: url(Images/cube_bg_2.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: left;
+    background-position-y: top;
     max-width: 100%;
     padding-left: 100px;
 }
@@ -194,7 +235,8 @@ button {
     flex-direction: column;
     background-image: url(Images/footer_cubes.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+    background-position-x: center;
     width: 100%;
     height: 100%;
     margin-top: 208px;
