--- a/style.css
+++ b/style.css
@@ -237,9 +237,10 @@ button {
     background-repeat: no-repeat;
     background-size: contain;
     background-position-x: center;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     margin-top: 208px;
+    
 }
 .footer_logo {
     display: flex;
@@ -257,4 +258,13 @@ button {
     display: flex;
     flex-flow: column;
     align-items: center;
+}
+.email {
+    margin-top: -16px;
+}
+.social {
+    margin-top: 8px;
+}
+.link, .insta {
+    margin-top: -16px;
 }
